projects/compiler/test/typechecker/indexing/error_unindexable_type.1.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  i[0]
     ^
Type 'Int' is not indexable
